[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target_version = ['py37']
include = '\.pyi?$'

[tool.poetry]
name = "doc-vcs"
version = "0.1.0"
description = ""
authors = ["pinkepie <hyunw0912@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
